[project]
name = "nightforo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.10.11", "pydantic>=2.10.6"]

[dependency-groups]
dev = ["ruff>=0.14.10"]

[tool.ruff]
# Line length according to PEP 8 - 79 characters
line-length = 79

# Target Python version
target-version = "py38"

exclude = [".venv", "venv", "__pycache__", "migrations", "build", "dist"]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore rules
ignore = [
    "D202",
    "D212",
    "D104",
    "D101",
    "D107",
    "D415",   # First line doesn't need ending punctuation for API endpoint descriptions
    "RUF001",
    "RUF006",
    "D100",
    "E501",
]

# Allow unused variables if they start with an underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"NightForo/http.py" = [
    "D102",
] # Internal implementation, documented in client.py
"NightForo/endpoints.py" = ["D103"] # Endpoint definitions, self-explanatory

# Docstring handling
[tool.ruff.lint.pydocstyle]
convention = "google"

# Settings for isort
[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# Formatting options
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["NightForo"]
pythonVersion = "3.8"
typeCheckingMode = "strict"
